compare cur-prev done, filter compares needs return

--- a/linkedin_assist/test_cfg.yaml
+++ b/linkedin_assist/test_cfg.yaml
@@ -1,2 +1,27 @@
 URLS:
   input_jobs: https://dollarbankcareers.jobs/feed/json
+FILES:
+  guids: ./guids_record.txt
+KEYWORDS:
+  job_title:
+    - it
+    - programmer
+    - systems
+    - developer
+    - idms
+    - database
+    - cobol
+    - jcl
+    - mainframe
+    - pc
+    - network
+    - middleware
+    - desktop
+    - linux
+    - windows
+    - microsoft
+    - sharepoint
+    - application
+    - digital
+    - ibm
+    - sql
