--- a/linkedin_assist/test_cfg.yaml
+++ b/linkedin_assist/test_cfg.yaml
@@ -1,10 +1,11 @@
+RUN_TYPE: DEVELOPMENT
 URLS:
   input_jobs: https://dollarbankcareers.jobs/feed/json
   li_api_get_user_profile: https://api.linkedin.com/v2/me
   li_api_auth_base: https://www.linkedin.com/oauth/v2/authorization
   li_api_token: https://www.linkedin.com/oauth/v2/accessToken
   li_api_redirect: http://127.0.0.1
-
+  li_api_share: https://api.linkedin.com/v2/ugcPosts
 FILES:
   guids: ./guids_record.txt
 KEYWORDS:
