Rework posting and making correct suggestions. Chk notes for progress.

--- a/linkedin_assist/test_cfg.yaml
+++ b/linkedin_assist/test_cfg.yaml
@@ -11,7 +11,7 @@ LIMITS:
   post_count: 100
 FILES:
   data: ./jobs.json
-  records: ./records.csv
+  records: ./records.json
   saved_guids: ./saved_guids.txt
 KEYWORDS:
   job_title:
