Refactored for more modularization. Works fine but needs more testing/finetuning... see record keeping and removals. Things like that.

--- a/linkedin_assist/test_cfg.yaml
+++ b/linkedin_assist/test_cfg.yaml
@@ -13,6 +13,13 @@ FILES:
   data: ./jobs.json
   records: ./records.json
   saved_guids: ./saved_guids.txt
+UI:
+  feedback_options:
+    global_accept:
+      - y
+      - n
+      - yes
+      - no
 KEYWORDS:
   job_title:
     - it
