--- a/linkedin_assist/cfg.yaml
+++ b/linkedin_assist/cfg.yaml
@@ -1,4 +1,4 @@
-RUN_TYPE: PRODUCTION
+RUN_TYPE: DEVELOPMENT
 KEYS:
   client_id: something
   client_secret: somethingelse
@@ -16,13 +16,7 @@ FILES:
   data: ./jobs.json
   records: ./records.json
   saved_guids: ./saved_guids.txt
-UI:
-  feedback_options:
-    global_accept:
-      - y
-      - n
-      - yes
-      - no
+  dev_vault: ./dnt/vault.yaml
 KEYWORDS:
   job_title:
     - it
