several updates: message list, english module, comments.

--- a/linkedin_assist/config/cfg.yaml
+++ b/linkedin_assist/config/cfg.yaml
@@ -10,8 +10,8 @@ URLS:
   li_api_redirect: http://127.0.0.1
   li_api_share: https://api.linkedin.com/v2/ugcPosts
 LIMITS:
-  post_age: 14
-  post_count: 100
+  post_age: 10
+  post_count: 30
 FILES:
   data: ./data/jobs.json
   records: ./data/records.json
@@ -40,3 +40,16 @@ KEYWORDS:
     - digital
     - ibm
     - sql
+  hashtags:
+    - DollarBank 
+    - ITjobs
+    - technologyjobs
+    - infotechjobs
+    - informationtechnologyjobs
+    - PGHjobs
+    - pittsburghjobs
+    - westernpennsylvaniajobs
+    - bankjobs
+    - bankingjobs
+    - fintech
+    - computersciencejobs
