bug fix: dbl posts (auto mode), some lang mods

--- a/linkedin_assist/config/cfg.yaml
+++ b/linkedin_assist/config/cfg.yaml
@@ -39,9 +39,9 @@ KEYWORDS:
     - microsoft
     - sharepoint
     - application
-    - digital
     - ibm
     - sql
+    - identity
   hashtags:
     - DollarBank 
     - ITjobs
